@@ -309,6 +309,7 @@ Fixes:
    * ctxpopup: fix elm_object_content_unset didn't unpack content from box
    * scroller : fix the scroller to locate the current page correctly in case that the scroller is suddenly resized and then the drag couldn't capture the page location.
    * scroller: don't focus region show if the scroller is disabled.
+   * mapbuf: reset the mapbuf internal states correclty when the content is removed(unset)
 
 Removals:
 
